# avrdude-libserialport

./: CMakeLists.txt  README.md
.github/workflows/: msvc-static-build.yml
